apps/infrastructure/istio/istio-gateway-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: NodePort
  ports:
  - name: http2
    nodePort: 80
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 443
    port: 443
    protocol: TCP
    targetPort: 443
  - name: status-port
    nodePort: 15021
    port: 15021
    protocol: TCP
    targetPort: 15021
