apps/infrastructure/istio/homepage-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: homepage-vs
  namespace: homepage
spec:
  hosts:
  - home.brettswift.com
  gateways:
  - istio-system/main-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: homepage
        port:
          number: 80
