apps/infrastructure/istio/jellyfin-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jellyfin-vs
  namespace: media
spec:
  gateways:
  - istio-system/main-gateway
  hosts:
  - home.brettswift.com
  http:
  - match:
    - uri:
        prefix: /jellyfin
    route:
    - destination:
        host: jellyfin.media.svc.cluster.local
        port:
          number: 80
    rewrite:
      uri: /
